--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -5,11 +5,11 @@
 .main {
   min-height: 100vh;
   
-  flex: 1;
+  /*flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: center;*/
 }
 
 .footer {
@@ -103,10 +103,6 @@
   line-height: 1.5;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
 
 @media (max-width: 600px) {
   .grid {
@@ -123,7 +119,5 @@
   .code {
     background: #111;
   }
-  .logo img {
-    filter: invert(1);
-  }
+
 }
