--- a/styles/NavBar.module.scss
+++ b/styles/NavBar.module.scss
@@ -1,5 +1,78 @@
 .navBarContainer {
-    |* {
-        margin: 0;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    height: 5rem;
+    width: 100%;
+    top: 0;
+    background-color: #fff;
+    box-shadow: 0 8px 9px -9px rgb(0 0 0 / 30%);
+    z-index: 201;
+
+    .logo {
+        display: flex;
+        justify-content: center;
+        height: 100%;
+
+    }
+    .navListContainer {
+        display: flex;
+        align-items: center;
+        z-index: 0;
+        transition: all .5s ease;
+        height: 5rem;
+        width: 70%;
+        margin-right: 110px;
+        .nav {
+            display: flex;
+            ul{
+                display: flex;
+                list-style: none;
+                height: 5rem;
+                li{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-right: 15px;
+                    padding: 0 10px;
+                    color: #4c4c4c;
+                    height: 100%;
+                    font-size: 18px;
+                    font-weight: 400;
+                    line-height: 1.3;
+                    font-family: Source Sans Pro;
+                }
+                li:hover {
+                    box-shadow: inset 0 -8px 0 0 rgba(15,49,129,1.0);
+                    transition: transform .5s ease-in-out,box-shadow .2s ease;white-space: normal;
+                    cursor: pointer;
+                }
+            }
+        }
+
+    }
+
+    .applyButtonContainer {
+        height: 70%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .applyButton{
+            padding: 10px 20px;
+            border: none;
+            border-radius: 10rem;
+            font-size: 14px;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            font-family: arial;
+            margin: 0 auto;
+            color: #fff;
+            background-color: #56C1A8;  
+        }
+        .applyButton:hover{
+            background: linear-gradient(0,#44bca1,#85dfcc);
+            color: #fff !important;
+            cursor: pointer;
+        }
     }
 }
