--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,13 +3,13 @@
 }
 
 .main {
-  min-height: 100vh;
-  
-  /*flex: 1;
   display: flex;
+  flex-direction: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;*/
+  align-items: center;
+  margin-top: 87px;
+ 
 }
 
 .footer {
