--- a/styles/NavBar.module.scss
+++ b/styles/NavBar.module.scss
@@ -13,7 +13,10 @@
         display: flex;
         justify-content: center;
         height: 100%;
-
+        cursor: pointer;
+        border-radius: 20px;
+        border: 2px solid rgb(226, 222, 222);
+        margin-left: 5px;
     }
     .navListContainer {
         display: flex;
@@ -37,13 +40,14 @@
                     padding: 0 10px;
                     color: #4c4c4c;
                     height: 100%;
-                    font-size: 18px;
+                    font-size: 16px;
                     font-weight: 400;
                     line-height: 1.3;
                     font-family: Source Sans Pro;
                 }
                 li:hover {
                     box-shadow: inset 0 -8px 0 0 rgba(15,49,129,1.0);
+                    color: #112D75;
                     transition: transform .5s ease-in-out,box-shadow .2s ease;white-space: normal;
                     cursor: pointer;
                 }
