--- a/styles/HomeComponent.module.scss
+++ b/styles/HomeComponent.module.scss
@@ -3,8 +3,9 @@
     width: 100%;
     height: 600px;
     padding: 50px;
-
-    .articleComponent {
+    background-image: url('http://gambiatechproject.org/wp-content/uploads/2022/03/MG_4609-1024x575.jpg');
+    background-size: cover;
+    .homeRigthComponent {
         width: 500px;
         border: 1px solid gray;
         float: right;
@@ -28,6 +29,10 @@
             text-transform: uppercase;
             color: #eee;
             margin: 1rem 0;
+        }
+        .rigthComponentImage {
+            display: flex;
+            justify-content: space-between;
         }
     }
 }
