New: added ico to Head title

--- a/styles/HomeComponent.module.scss
+++ b/styles/HomeComponent.module.scss
@@ -7,8 +7,8 @@
     background-size: cover;
     .homeRigthComponent {
         width: 500px;
-        border: 1px solid gray;
-        float: right;
+        float: left;
+        margin-top: 50px;
         margin-right: 50px;
         background-color: rgba(15,49,129,.9019607843137255);
         padding: 2rem 3.5rem;
