--- a/styles/HomeComponent.module.scss
+++ b/styles/HomeComponent.module.scss
@@ -1,14 +1,15 @@
 .homeSectionComponent {
     align-items: center;
     width: 100%;
-    height: 600px;
+    height: 550px;
     padding: 50px;
     background-image: url('http://gambiatechproject.org/wp-content/uploads/2022/03/MG_4609-1024x575.jpg');
     background-size: cover;
+    background-color: aqua;
     .homeRigthComponent {
         width: 500px;
-        float: left;
-        margin-top: 50px;
+        float: right;
+        margin-top: 30px;
         margin-right: 50px;
         background-color: rgba(15,49,129,.9019607843137255);
         padding: 2rem 3.5rem;
@@ -26,9 +27,17 @@
         p{
             font-weight: 400;
             font-size: 14px;
-            text-transform: uppercase;
             color: #eee;
             margin: 1rem 0;
+        }
+        .hr {
+            opacity: .5;
+            max-width: 50rem;
+            margin: 1rem auto;
+            height: 2px;
+            color: #ccc;
+            background-color: #ccc;
+            border: none;
         }
         .rigthComponentImage {
             display: flex;
