--- a/styles/HomeComponent.module.scss
+++ b/styles/HomeComponent.module.scss
@@ -1,12 +1,15 @@
 .homeSectionComponent {
     align-items: center;
     width: 100%;
-    height: 550px;
+    height: 500px;
     padding: 50px;
     background-image: url('http://gambiatechproject.org/wp-content/uploads/2022/03/MG_4609-1024x575.jpg');
     background-size: cover;
-    background-color: aqua;
+    //background-color: aqua;
     .homeRigthComponent {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         width: 500px;
         float: right;
         margin-top: 30px;
@@ -16,32 +19,44 @@
         /*transform: translateY(-4rem);*/
 
         h2 {
-            margin-bottom: -20px;
+            margin-bottom: -25px;
             color: #fff;
-            font-weight: 900;
-            font-size: 35px;
+            font-weight: 800;
+            font-size: 2em;
+            font-family: arial sans-serif;
             line-height: 1.3;
             margin: 0;
             font-family: Montserrat,sans-serif;
         }
         p{
             font-weight: 400;
-            font-size: 14px;
+            font-size: 15.5px;
             color: #eee;
             margin: 1rem 0;
+
+            .gtSpan {
+                font-weight: bold;
+                font-size: 16px;
+            }
+            .higthLigth {
+                background: linear-gradient(0,#3ddab885,#5ebeab57);  
+            }
         }
         .hr {
             opacity: .5;
             max-width: 50rem;
             margin: 1rem auto;
             height: 2px;
-            color: #ccc;
-            background-color: #ccc;
+            color: rgba(204, 204, 204, 0.397);
+            background-color: rgba(204, 204, 204, 0.534);
             border: none;
+            margin: 10px 0;
         }
         .rigthComponentImage {
             display: flex;
             justify-content: space-between;
+            margin-bottom: -5px;
+            padding-top: 10px;
         }
     }
 }
