New: add whyGambiaTech compoment with full styled

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,10 +4,9 @@
 
 .main {
   display: flex;
-  flex-direction: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
   margin-top: 87px;
  
 }
