--- a/styles/HomeComponent.module.scss
+++ b/styles/HomeComponent.module.scss
@@ -3,9 +3,11 @@
     width: 100%;
     height: 500px;
     padding: 50px;
-    background-image: url('http://gambiatechproject.org/wp-content/uploads/2022/03/MG_4609-1024x575.jpg');
+    background-image: url('../public/bgHome.JPG');
     background-size: cover;
+    background-position: center;
     //background-color: aqua;
+    z-index: 2;
     .homeRigthComponent {
         display: flex;
         flex-direction: column;
@@ -17,7 +19,7 @@
         background-color: rgba(15,49,129,.9019607843137255);
         padding: 2rem 3.5rem;
         /*transform: translateY(-4rem);*/
-
+        z-index: 1;
         h2 {
             margin-bottom: -25px;
             color: #fff;
@@ -26,7 +28,6 @@
             font-family: arial sans-serif;
             line-height: 1.3;
             margin: 0;
-            font-family: Montserrat,sans-serif;
         }
         p{
             font-weight: 400;
