--- a/styles/NavBar.module.scss
+++ b/styles/NavBar.module.scss
@@ -38,7 +38,7 @@
                     justify-content: center;
                     margin-right: 15px;
                     padding: 0 10px;
-                    color: #4c4c4c;
+                    color: #494A52;
                     height: 100%;
                     font-size: 16px;
                     font-weight: 400;
