--- a/styles/HomeComponent.module.scss
+++ b/styles/HomeComponent.module.scss
@@ -3,7 +3,7 @@
     width: 100%;
     height: 500px;
     padding: 50px;
-    background-image: url('../public/bgHome.JPG');
+    background-image: url('../public/liveTheExperience.webp');
     background-size: cover;
     background-position: center;
     //background-color: aqua;
