--- a/styles/WhyGambiaTech.module.scss
+++ b/styles/WhyGambiaTech.module.scss
@@ -24,6 +24,7 @@
             color: rgba(15, 49, 129, 0.9019607843);
         }
         .mainObj {
+            color: #494a52ce;
             font-family: arial sans-serif;
             font-size: 24px;
             padding: 10px;
