--- a/styles/HomeComponent.module.scss
+++ b/styles/HomeComponent.module.scss
@@ -1,7 +1,7 @@
 .homeSectionComponent {
     align-items: center;
     width: 100%;
-    height: 500px;
+    height: 600px;
     padding: 50px;
     background-image: url('../public/liveTheExperience.webp');
     background-size: cover;
@@ -58,6 +58,13 @@
             justify-content: space-between;
             margin-bottom: -5px;
             padding-top: 10px;
+            border: 2px solid #fff;
+            padding: 5px;
+            background-color: #fff;
+
+            .afLogo {
+                cursor: pointer;
+            }
         }
     }
 }
