--- a/styles/Awareness.module.scss
+++ b/styles/Awareness.module.scss
@@ -11,19 +11,25 @@
     }
 
     .sectionContainer {
-        display: grid;
-        grid-template-columns: repeat(3,1fr);
+        display: flex;
+        justify-content: center;
+        // display: grid;
+        // grid-template-columns: repeat(3,1fr);
         height: 500px;
         padding: 100px 50px;
         margin-top: -70px;
         .awareness {
             border: 1px solid rgba(221, 218, 218, 0.274);
             display: flex;
+            flex-wrap: wrap;
             align-items: center;
             flex-direction: column;
             justify-content: center;
             height: 400px;
             margin-top: 20px;
+            opacity: 1;
+            transition: opacity .10s ease-in-out;
+            flex: 0 0 368px;
             .awareText {
                 display: flex;
                 flex-direction: column;
@@ -48,7 +54,7 @@
                     margin-top: -18px;
                     margin-left: 50px;
                     width: 2px;
-                    height: 70px;
+                    height: 50px;
                     background: linear-gradient(0, #44bca1, #85dfcc);
                     //rgba(5, 5, 105, 0.932)
 
@@ -125,6 +131,25 @@
             }
             
             
+        }
+        .awareness1 {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: #2e6ea2c4;
+        }
+        .awareness2 {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #f8bf45a9;
+        }
+        .awareness3 {
+            display:flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #259244a4;
         }
         /*.awareness:hover {
             cursor: pointer;
