--- a/styles/Awareness.module.scss
+++ b/styles/Awareness.module.scss
@@ -19,7 +19,7 @@
         padding: 100px 50px;
         margin-top: -70px;
         .awareness {
-            border: 1px solid rgba(221, 218, 218, 0.274);
+            //border: 1px solid rgba(221, 218, 218, 0.274);
             display: flex;
             flex-wrap: wrap;
             align-items: center;
@@ -39,7 +39,7 @@
                 
                 h3 {
                     padding: 5px;
-                    font-size: 22px;
+                    font-size: 20px;
                     color: rgba(5, 5, 105, 0.932);
                     //color: #01A682;
                     // border: 1px solid gray;
@@ -60,7 +60,7 @@
 
                 }
                 p {
-                    color: #494A52;
+                    color: #41424e;
                     border-left: 5px solid rgba(5, 5, 105, 0.932);
                     //#01A682; 
                     padding: 5px 15px;
@@ -109,8 +109,9 @@
                     margin: 0 auto;
                     //color: #44bca1;
                     color: #fff;
-                    background-color: rgb(252, 248, 248);
-                    background: linear-gradient(0, #44bca1, #85dfcc);
+                    background-color: transparent;
+                    // background-color: rgb(252, 248, 248);
+                    // background: linear-gradient(0, #44bca1, #85dfcc);
                     border: 1px solid #44bca1;
                     border-radius: 10px ;
                     height: 30px;
@@ -137,19 +138,19 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            background-color: #2e6ea2c4;
+            background-color: #2e6ea2a8;
         }
         .awareness2 {
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #f8bf45a9;
+            background-color: #fbc94ca6;
         }
         .awareness3 {
             display:flex;
             flex-direction: column;
             align-items: center;
-            background-color: #259244a4;
+            background-color: #2a9349b9;
         }
         /*.awareness:hover {
             cursor: pointer;
