--- a/styles/LiveTheExperience.module.scss
+++ b/styles/LiveTheExperience.module.scss
@@ -33,7 +33,8 @@
         
     }
     .articleContainer {
-        background-color: #F1F5F8;
+        //background-color: #5e8fb786;
+        //background-color: #F1F5F8;
         //padding: 30px 30px;
         display: flex;
         //justify-content: center;
@@ -58,8 +59,9 @@
         width: 25%;
         max-width: 120rem;
         height: 480px;
-        background-color: rgb(255, 255, 255);
+        //background-color: rgb(255, 255, 255);
         //border-radius: 30px;
+        
         margin: 5px;
         overflow: hidden;
         .articleImg1 {
@@ -102,7 +104,7 @@
             width: 100%;  
             h3 {
                 color: #3109a0fa;
-                text-decoration: underline;
+                //text-decoration: underline;
                 font-size: 16px;
                 //border: 1px solid greenyellow;
                 height: 50px;
@@ -133,7 +135,7 @@
             // display: flex;
             // flex-direction: column;
             // justify-content: left;
-            background-color: #fff;
+            //background-color: #fff;
             //padding: 10px;
             //margin-top: -5px;
             //border: 1px solid red;
@@ -172,5 +174,9 @@
                 font-size: 14px;
             }
         }
-    }
+
+    //     .article4 {
+    //         background-color: rgba(216, 27, 96, 0.24);;
+    //     }
+     }
 }
